# rust-huffman-compress

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
benches/: benches.rs
src/: lib.rs
