[package]
name = "huffman-compress"
version = "0.1.0" # remember to update html_root_url
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
license = "MIT/Apache-2.0"
keywords = ["huffman", "compression", "decompression"]
readme = "README.md"
repository = "https://github.com/niklasf/rust-huffman-compress"
categories = ["compression", "encoding", "algorithms"]
description = "Huffman compression given a probability distribution over arbitrary symbols"

[dependencies]
bit-vec = "0.4"
num-traits = "0.1"
