[package]
name = "huffman-compress"
version = "0.6.0" # remember to update html_root_url
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
license = "MIT/Apache-2.0"
keywords = ["huffman", "compression", "decompression"]
readme = "README.md"
repository = "https://github.com/niklasf/rust-huffman-compress"
categories = ["compression", "encoding", "algorithms"]
description = "Huffman compression given a probability distribution over arbitrary symbols"

[[bench]]
name = "benches"
harness = false

[dependencies]
bit-vec = "0.6"
num-traits = "0.2"

[dev-dependencies]
bencher = "0.1"
quickcheck = "0.8"

[badges]
travis-ci = { repository = "niklasf/rust-huffman-compress", branch = "master" }
